--- a/values.yaml
+++ b/values.yaml
@@ -7,24 +7,95 @@ installCRDs: true
 
 imagePullSecrets: []
 
-webhook:
-  configData: {}
+policy-controller:
+  configData:
+    no-match-policy: warn
   replicaCount: 1
-  name: webhook
+  name: policy-controller
   image:
     repository: ghcr.io/sigstore/policy-controller/policy-controller
-    # crane digest ghcr.io/sigstore/policy-controller/policy-controller:v0.8.0
-    version: sha256:e91bcd954394b414d3b80adfc2cefdae84dd7985fb938a895471eb34aac57744
+    # crane digest ghcr.io/sigstore/policy-controller/policy-controller:v0.8.2
+    version: sha256:f291fce5b9c1a69ba54990eda7e0fe4114043b1afefb0f4ee3e6f84ec9ef1605
     pullPolicy: IfNotPresent
   env: {}
   extraArgs: {}
-  spec:
-  images:
-  - glob: "**your-desired-value**"
-  authorities:
-  - key:
-      secretRef:
-        name: mysecret
+  resources:
+    limits:
+      cpu: 200m
+      memory: 512Mi
+    requests:
+      cpu: 100m
+      memory: 128Mi
+  securityContext:
+    enabled: false
+    runAsUser: 65532
+  failurePolicy: Fail
+  podSecurityContext:
+    enabled: true
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
+    runAsUser: 1000
+    capabilities:
+      drop:
+        - ALL
+  serviceAccount:
+    annotations: {}
+    create: true
+    name: ""
+  service:
+    annotations: {}
+    type: ClusterIP
+    port: 443
+    # For nodeport, specify the following:
+    #   type: NodePort
+    #   nodePort: <port-number>
+  volumeMounts: []
+  volumes: []
+  namespaceSelector:
+    matchExpressions:
+      - key: policy.sigstore.dev/include
+        operator: In
+        values: ["true"]
+  registryCaBundle: {}
+  webhookNames:
+    defaulting: "defaulting.clusterimagepolicy.sigstore.dev"
+    validating: "validating.clusterimagepolicy.sigstore.dev"
+
+leasescleanup:
+  image:
+    repository: cgr.dev/chainguard/kubectl
+    version: 1.26.0
+    pullPolicy: IfNotPresent
+
+## common node selector for all the pods
+commonNodeSelector: {}
+#  key1: value1
+#  key2: value2
+
+## common tolerations for all the pods
+commonTolerations: []
+# - key: "key"
+#   operator: "Equal"
+#   value: "value"
+#   effect: "NoSchedule"
+
+## serviceMonitor makes policy controller metrics discoverable to prometheus
+serviceMonitor:
+  enabled: false
+
+
+
+policy-webhook:
+  configData: {}
+  replicaCount: 1
+  name: policy-webhook
+  image:
+    repository: ghcr.io/sigstore/policy-controller/policy-webhook
+    # crane digest ghcr.io/sigstore/policy-controller/policy-controller:v0.8.2
+    version: sha256:5fe1cd4b5262b1ce6e990800b3313b814d4d965873bb3a16c29ac4a66a2a23d7
+    pullPolicy: IfNotPresent
+  env: {}
+  extraArgs: {}
   resources:
     limits:
       cpu: 200m
